force-app/main/default/objects/inspire1__InspirePlannerConfig__c/inspire1__InspirePlannerConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Inspire Planner - Organization settings related to Inspire Planner configurations.</description>
    <label>Inspire Planner Config</label>
</CustomObject>