force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Admin_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Admin_Email_Addresses__c</fullName>
    <description>Beacon notification emails. Input multiple email addresses separated by ;</description>
    <inlineHelpText>Input email addresses to receive Inspire Planner admin notifications Multiple emails can be inputted separated by semi-colon (;).</inlineHelpText>
    <label>Admin Notification Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>