force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Batch_Save_Size__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Batch_Save_Size__c</fullName>
    <label>Batch Save Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>