force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__BeaconLastExecuted__c.field-meta.xml
<CustomField>
    <fullName>inspire1__BeaconLastExecuted__c</fullName>
    <description>Defines the last date/time the Beacon was run.  Inspire Planner Beacon performs the following system processes: sync Salesforce Tasks to Project Tasks, roll-up calculations for effort and cost, unlocks Projects, deletes unassigned Salesforce Tasks.</description>
    <inlineHelpText>Defines the last date/time the Beacon was run.  Inspire Planner Beacon performs the following system processes: sync Salesforce Tasks to Project Tasks, roll-up calculations for effort and cost, unlocks Projects, deletes unassigned Salesforce Tasks.</inlineHelpText>
    <label>Beacon Last Executed</label>
    <type>DateTime</type>
</CustomField>