force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Chatter_User_Domain__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Chatter_User_Domain__c</fullName>
    <label>Chatter User Domain</label>
    <length>40</length>
    <type>Text</type>
</CustomField>