force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Collaborator_Invitation_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Collaborator_Invitation_Email_ID__c</fullName>
    <description>Salesforce ID of email template used to send to project collaborators.</description>
    <inlineHelpText>Salesforce ID of email template used to send to project collaborators.</inlineHelpText>
    <label>Collaborator Invitation Email ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>