force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Completed_Task_Statuses__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Completed_Task_Statuses__c</fullName>
    <defaultValue>&quot;Deferred&quot;</defaultValue>
    <description>Project Task statuses that should be treated as 100% completed. Separate values with semi-colon (;).</description>
    <inlineHelpText>Project Task statuses that should be treated as 100% completed. Separate values with semi-colon (;).</inlineHelpText>
    <label>Completed Task Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>