force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Create_Time_Tracking_Pages__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Create_Time_Tracking_Pages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Time Tracking Pages</label>
    <type>Checkbox</type>
</CustomField>