force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Currency_Symbol__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Currency_Symbol__c</fullName>
    <label>Currency Symbol</label>
    <length>10</length>
    <type>Text</type>
</CustomField>