force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Custom_Beacon_Interval__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Custom_Beacon_Interval__c</fullName>
    <description>Defines how often Beacon will execute.  Define in minutes.</description>
    <inlineHelpText>Set how often the Beacon will execute.  Input interval in minutes.</inlineHelpText>
    <label>Custom Beacon Interval</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>