force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Custom_Project_Page__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Custom_Project_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines URL for home icon.</description>
    <inlineHelpText>Check if you are using a custom Lightning page for Projects.</inlineHelpText>
    <label>Custom Project Page</label>
    <type>Checkbox</type>
</CustomField>