force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Default_Planned_Effort__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Default_Planned_Effort__c</fullName>
    <label>Default Planned Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>