force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Default_Project_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Default_Project_Template_Id__c</fullName>
    <description>Used for Project create automation from Account records.</description>
    <inlineHelpText>Used for Project create automation from Account records.</inlineHelpText>
    <label>Default Project Template ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>