force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Disable_Effort_in_Project_Portal__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Disable_Effort_in_Project_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Setting field to TRUE will hide the Planned and Actual Effort columns in external project portal.</description>
    <inlineHelpText>Setting field to TRUE will hide the Planned and Actual Effort columns in external project portal.</inlineHelpText>
    <label>Disable Effort in Project Portal</label>
    <type>Checkbox</type>
</CustomField>