force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Disable_Status_Mapping_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Disable_Status_Mapping_to_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Status Mapping to % Complete</label>
    <type>Checkbox</type>
</CustomField>