force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Disable_Time_Tracker_Weekly_Tasks__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Disable_Time_Tracker_Weekly_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this setting to TRUE if users do not want Time Tracker weekly view to display applicable tasks by default.</description>
    <inlineHelpText>Set this setting to TRUE if users do not want Time Tracker weekly view to display applicable tasks by default.</inlineHelpText>
    <label>Disable Time Tracker Weekly Tasks</label>
    <type>Checkbox</type>
</CustomField>