force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Disable_Triggers_for_Data_Migration__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Disable_Triggers_for_Data_Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables system triggers so limits are not hit for data migrations.</description>
    <inlineHelpText>Disables system triggers so limits are not hit for data migrations.</inlineHelpText>
    <label>Disable Triggers for Data Migration</label>
    <type>Checkbox</type>
</CustomField>