force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Enable_Contact_Task_Assignment_Email__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Enable_Contact_Task_Assignment_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables workflow to auto email contact an email notification when a new project task is assigned.</description>
    <inlineHelpText>Enables workflow to auto email contact an email notification when a new project task is assigned.</inlineHelpText>
    <label>Enable Contact Task Assignment Email</label>
    <type>Checkbox</type>
</CustomField>