force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Enable_Time_Tracker__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Enable_Time_Tracker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Time Tracker</label>
    <type>Checkbox</type>
</CustomField>