force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Enable_Timesheet_Feature__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Enable_Timesheet_Feature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to enable Timesheets and approval process.</description>
    <inlineHelpText>Check to enable Timesheets and approval process.</inlineHelpText>
    <label>Enable Timesheet Feature</label>
    <type>Checkbox</type>
</CustomField>