force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__ExternalSite_ClientId__c.field-meta.xml
<CustomField>
    <fullName>inspire1__ExternalSite_ClientId__c</fullName>
    <description>Populate if customer has a custom domain for external project portal. Otherwise leave blank and standard portal is utilized.  Retrieved from Heroku External App ClientId.</description>
    <inlineHelpText>Populate if customer has a custom domain for external project portal. Otherwise leave blank and standard portal is utilized.  Retrieved from Heroku External App ClientId.</inlineHelpText>
    <label>Custom External Portal ClientId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>