force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__ExternalSiteURL__c.field-meta.xml
<CustomField>
    <fullName>inspire1__ExternalSiteURL__c</fullName>
    <description>Populate if customer has a custom domain for external project portal.  Otherwise leave blank and standard portal is utilized.</description>
    <inlineHelpText>Populate if customer has a custom domain for external project portal.  Otherwise leave blank and standard portal is utilized.</inlineHelpText>
    <label>Custom External Portal Domain</label>
    <type>Url</type>
</CustomField>