force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Global_Default_Project_Settings__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Global_Default_Project_Settings__c</fullName>
    <label>Global Default Project Settings</label>
    <length>18</length>
    <type>Text</type>
</CustomField>