force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Header_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Header_Template_ID__c</fullName>
    <description>Defines header ID of project template used for project stitching.</description>
    <inlineHelpText>Defines header ID of project template used for project stitching.</inlineHelpText>
    <label>Header Template ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>