force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__InternalURL__c.field-meta.xml
<CustomField>
    <fullName>inspire1__InternalURL__c</fullName>
    <description>The Domain of customer Salesforce instance  For example, https://na1.salesforce.com/
Referenced by external project portal.  Customer to leave blank unless portal Chatter functionality throws errors.</description>
    <inlineHelpText>Used to define the custom domain of customer Salesforce instance.  Populate only if using Chatter Free Users feature.</inlineHelpText>
    <label>Internal Salesforce Domain</label>
    <type>Url</type>
</CustomField>