force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Jupiter_Save_Logic__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Jupiter_Save_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jupiter Save Logic</label>
    <type>Checkbox</type>
</CustomField>