force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Logo_Url__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Logo_Url__c</fullName>
    <description>URL to logo used for print export.</description>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>