force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Opportunity_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Opportunity_Field_API_Name__c</fullName>
    <description>API name of Opportunity lookup field.</description>
    <inlineHelpText>Define value if you would like to use a custom Opportunity field for Project Template Stitching feature, instead of Opportunity field included with Inspire Planner.</inlineHelpText>
    <label>Opportunity Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>