force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Project_Public_Read_Write__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project_Public_Read_Write__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deprecated</label>
    <type>Checkbox</type>
</CustomField>