force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Project_Stitching_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project_Stitching_Field_API_Name__c</fullName>
    <label>Project Stitching Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>