force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Ready_to_Start_Notification_API_Name__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Ready_to_Start_Notification_API_Name__c</fullName>
    <description>API name of Salesforce Task field used to invoke Ready to Start email notification.</description>
    <inlineHelpText>API name of Salesforce Task field used to invoke Ready to Start email notification.  Must be of field type checkbox.</inlineHelpText>
    <label>Ready to Start Notification API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>