force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Salesforce_Task_Recordtype__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Salesforce_Task_Recordtype__c</fullName>
    <description>Inspire Planner will assign this recordtype ID to all related Salesforce Tasks.</description>
    <inlineHelpText>Input the 18 digit ID of the desired recordtype.</inlineHelpText>
    <label>Salesforce Task Recordtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>