force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__StatusReportVisualforcePageName__c.field-meta.xml
<CustomField>
    <fullName>inspire1__StatusReportVisualforcePageName__c</fullName>
    <label>Status Report Custom Page Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>