force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Stopwatch_Active_Field__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Stopwatch_Active_Field__c</fullName>
    <description>Captures the API name of field to update when Stopwatch is active.</description>
    <inlineHelpText>Input the field API Name.</inlineHelpText>
    <label>Stopwatch Active Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>