force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__System_Jobs_User__c.field-meta.xml
<CustomField>
    <fullName>inspire1__System_Jobs_User__c</fullName>
    <label>System Jobs User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>