force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Task_Amber_Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Task_Amber_Days_Overdue__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Defines number of days overdue for Amber setting. Set by inputting greatest number of days to be Amber.  Tasks will be set to Red when days overdue is greater than this value.</description>
    <inlineHelpText>Defines number of days overdue for Amber setting. Set by inputting greatest number of days to be Amber.  Tasks will be set to Red when days overdue is greater than this value.</inlineHelpText>
    <label>Task Amber - Days Overdue</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>