force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Task_Historical_Query_Range__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Task_Historical_Query_Range__c</fullName>
    <label>Task Historical Query Range</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>