force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Task_Start_Date_API_Name__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Task_Start_Date_API_Name__c</fullName>
    <description>Defines the API name for Start Date on Salesforce Task object.</description>
    <label>Task Start Date API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>