force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Task_Status_Completed__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Task_Status_Completed__c</fullName>
    <description>The inputted value will replace standard Completed value and inherit behavior of Completed.</description>
    <inlineHelpText>Input a single status value that will replace the standard Completed status.</inlineHelpText>
    <label>Task Status Completed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>