force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Task_Status_Deferred__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Task_Status_Deferred__c</fullName>
    <description>The inputted value will replace standard Deferred value and inherit behavior of Deferred.</description>
    <inlineHelpText>Input a single status value that will replace the standard Deferred status.</inlineHelpText>
    <label>Task Status Deferred</label>
    <length>255</length>
    <type>Text</type>
</CustomField>