force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Task_Status_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Task_Status_In_Progress__c</fullName>
    <description>The inputted value will replace standard In Progress value and inherit behavior of In Progress.</description>
    <inlineHelpText>Input a single status value that will replace the standard In Progress status.</inlineHelpText>
    <label>Task Status In Progress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>