force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Task_Status_Not_Started__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Task_Status_Not_Started__c</fullName>
    <description>The inputted value will replace standard Not Started value and inherit behavior of Not Started.</description>
    <inlineHelpText>Input a single status value that will replace the standard Not Started status.</inlineHelpText>
    <label>Task Status Not Started</label>
    <length>255</length>
    <type>Text</type>
</CustomField>