force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Task_Status_Waiting_on_Someone_else__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Task_Status_Waiting_on_Someone_else__c</fullName>
    <description>The inputted value will replace standard Waiting on Someone else value and inherit behavior of Waiting on Someone else.</description>
    <inlineHelpText>Input a single status value that will replace the standard Waiting on Someone else status.</inlineHelpText>
    <label>Task Status Waiting on Someone else</label>
    <length>255</length>
    <type>Text</type>
</CustomField>