force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Time_Tracker_Status_List__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Time_Tracker_Status_List__c</fullName>
    <description>Input custom Project status values to include in Search.  When status is defined here, Search function will include Projects with status.  Comma separated.</description>
    <inlineHelpText>Input custom Project status values to include in Search.  When status is defined here, Search function will include Projects with status.

Comma separated.</inlineHelpText>
    <label>Time Tracker Status List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>