force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Use_Chatter_Free_Group__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Use_Chatter_Free_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Chatter Free Group</label>
    <type>Checkbox</type>
</CustomField>