force-app/main/default/objects/inspire1__InspirePlannerConfig__c/fields/inspire1__Use_Effort_to_Calculate_Cost__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Use_Effort_to_Calculate_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, then workflow will auto populate Budgeted Cost and Actual Cost of task based on Planned and Actual Effort using User/Contact billable rate.</description>
    <inlineHelpText>If TRUE, then workflow will auto populate Budgeted Cost and Actual Cost of task based on Planned and Actual Effort using User/Contact billable rate.</inlineHelpText>
    <label>Use Effort to Calculate Cost</label>
    <type>Checkbox</type>
</CustomField>